# roblox-clone

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.json  setup.sh  vcpkg.json
assets/shaders/: basic.frag  basic.vert
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Application.hpp  Config.cpp  Config.hpp  Logger.cpp  Logger.hpp
src/editor/: Editor.cpp  Editor.hpp  Viewport.cpp  Viewport.hpp
src/network/: Client.cpp  Client.hpp  NetworkManager.cpp  NetworkManager.hpp  Server.cpp  Server.hpp
src/renderer/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
src/scene/: Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp
src/scripting/: ScriptBindings.cpp  ScriptBindings.hpp  ScriptEngine.cpp  ScriptEngine.hpp
tests/: CMakeLists.txt  main.cpp
